# flashbots-privacy

./: .gitignore  .gitmodules  README.md
evm2mpc/mininimbus/: calculate_reward.nim  dao.nim  executor_helpers.nim  gaslimit.nim  process_block.nim  process_transaction.nim  validate.nim  vm_state.nim
evm2mpc/mininimbus/db/: accounts_cache.nim
evm2mpc/mininimbus/transaction/: call_evm.nim
evm2mpc/mininimbus/vm/: state.nim
experiment/: config.json  run_experiment.py  shaper.sh
fhe_block_greedy_knapsack/: CMakeLists.txt  README.me  fhe_client.cpp  fhe_server.cpp  helpers.h  simulate_data.py
flashbots_mpc/: bundle_scoring.mpc  flashbots_types.py  simulate.py
flashbots_mpc/Player-Data/: Input-P0-0  Input-P1-0  Input-P2-0  Input-P3-0  Input-P4-0  Input-P5-0  Input-P6-0  Input-P7-0  Input-P8-0  Input-P9-0
mpc_block_knapsack/: knapsack.mpc  knapsack.py  simulate_data.py
mpc_bundle_scoring/: bundle_scoring.mpc  flashbots_types.py
mpc_bundle_scoring/MP-SPDZ/: .gitignore  .gitmodules  CHANGELOG.md  CONFIG  CONFIG.mine  License.txt  Makefile  README.md  azure-pipelines.yml  compile.py  galois-degree.x
mpc_bundle_scoring/MP-SPDZ/BMR/: AndJob.cpp  AndJob.h  BooleanCircuit.h  (+30 more)
mpc_bundle_scoring/Player-Data/: Input-P2-0  Input-P4-0  Input-P6-0  Input-P7-0  Input-P8-0
mpc_bundle_scoring/flashbots_mpc/: bundle_scoring.mpc  simulate.py
mpc_knapsack_auction/: README.md  knapsack_auction.mpc  knapsack_auction.py  knapsack_auction_exec.py  simulate_data.py
mpc_shifting_knapsack/: shifting_knapsack.cpp  shifting_knapsack.mpc  shifting_knapsack.py  simulate_data.py
(+1292 files in other folders)
